[gd_scene load_steps=5 format=2]

[ext_resource path="res://ShipEntity.gd" type="Script" id=1]
[ext_resource path="res://WeaponSystem/MissileLauncher.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=3]

[sub_resource type="CapsuleMesh" id=4]

[node name="ShipEntity" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.41804, 0 )
gravity_scale = 0.0
linear_damp = 2.0
angular_damp = 2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
thrust_strength = 10.0

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="CSGMesh" type="CSGMesh" parent="."]
mesh = SubResource( 4 )

[node name="MainThruster" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -10 )
debug_shape_custom_color = Color( 1, 0, 0, 1 )
debug_shape_thickness = 4

[node name="Heading" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, 10 )
debug_shape_custom_color = Color( 1, 0, 0.913725, 1 )
debug_shape_thickness = 4

[node name="CenterOfMass" type="Position3D" parent="."]

[node name="ShieldTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="MissileLauncher" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.521562, -0.975451, 1.84163 )

[node name="MissileLauncher2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.5, -0.975, 1.84129 )

[connection signal="timeout" from="ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]
